WIP for large Mujina refactor / modernization https://github.com/OpenConext/Mujina/issues/103 https://github.com/OpenConext/Mujina/issues/102 https://github.com/OpenConext/Mujina/issues/92